<resources>
    <string name="app_name">IHC-PROYECTO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_lateral_Inicio">Inicio</string>
    <string name="menu_lateral_Administrador">Administrador</string>
    <string name="menu_lateral_Sesion">Sesion</string>
    <string name="menu_lateral_SobreNosotros">Sobre Nosotros</string>


    <string name="mas_vendidos">Más Vendidos</string>
    <string name="productos_recientes">Productos Recientes</string>
    <string name="productos_oferta">Productos en Oferta</string>


    <string name="buton_computadora">Computadoras</string>
    <string name="buton_tablet">Tabletas</string>
    <string name="buton_laptop">Portatiles</string>
    <string name="buton_celular">Celulares</string>

    <string name="nombre_Usuario">Nombre</string>
    <string name="apellidos_Usuario">Apellidos</string>
    <string name="correo_Usuario">Correo Electrónico</string>
    <string name="b_registrar_Usuario">Registrar</string>
    <string name="titulo_sesion">Registrase</string>


    <string name="inicia_sesion">Iniciar Sesión</string>


</resources>
