<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home"
            android:title="@string/menu_lateral_Inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/menu_lateral_Administrador" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/sesion"
            android:title="@string/menu_lateral_Sesion" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_lateral_SobreNosotros" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
