<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <HorizontalScrollView
        android:id="@+id/menuDeslizable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/menuDeslizableLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/MenuComputadoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="onclick"
                android:text="@string/buton_computadora"
                android:textColor="@color/colorTransparentWhite" />

            <Button
                android:id="@+id/MenuLaptops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onclick"
                android:text="@string/buton_laptop"
                android:textColor="@color/colorTransparentWhite" />

            <Button
                android:id="@+id/MenuTablets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onclick"
                android:text="@string/buton_tablet"
                android:textColor="@color/colorTransparentWhite" />

            <Button
                android:id="@+id/MenuCelulares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onclick"
                android:text="@string/buton_celular"
                android:textColor="@color/colorTransparentWhite" />

        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/containerPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>