<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".FragmentVistaTablets">

    //DESLIZADOR

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--PARA EL DESLIZADOR HORIZONTAL DEL MENU SUPERIOR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/mas_vendidos"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recicler_mas_vendidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/productos_recientes"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recicler_recientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/productos_oferta"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recicler_oferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"></android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>




</FrameLayout>